--- a/test.html
+++ b/test.html
@@ -3,40 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Positioned Text</title>
+    <title>Position Text</title>
     <style>
-        html, body {
-            height: 100%;
+        body {
             margin: 0;
-            display: grid;
-            place-items: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr auto;
-            grid-template-rows: auto 1fr;
-            width: 100%;
-            height: 100%;
+        #container {
+            position: relative;
+            width: 1000px;
+            height: 1000px;
+            border: 1px solid black;
         }
-        .spacer-x {
-            grid-column: 1;
-        }
-        .spacer-y {
-            grid-row: 1;
-        }
-        .text {
-            grid-column: 2;
-            grid-row: 2;
-            align-self: start;
-            justify-self: start;
+        #flag {
+            position: absolute;
+            top: 300px;
+            left: 300px;
+            font-size: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="grid-container">
-        <div class="spacer-x"></div>
-        <div class="spacer-y"></div>
-        <div class="text">flag</div>
+    <div id="container">
+        <div id="flag">flag</div>
     </div>
 </body>
 </html>
