Fixing the cleaning and doing more stuff

--- a/HTML.html
+++ b/HTML.html
@@ -4,6 +4,17 @@
         <title>testHTML</title>
     </head>
     <body>
+        <h1>HTML tester thing - by aditya</h1>
         <p>Hello! This is (clearly) a test!!!</p>
+        <p>This is a test, trust bro</p>
+        <a href="https://www.example.com">Page link thing</a>
+        <ul>
+            <li>List of things</li>
+            <li>Dont fall</li>
+            <li>Do core</li>
+        </ul>
+        <footer>
+            <p>I dont know what im doing</p>
+        </footer>
     </body>
 </html>
