Running tests of ChatGPT

--- a/HTML.html
+++ b/HTML.html
@@ -7,9 +7,9 @@
         <h1>HTML tester thing - by aditya</h1>
         <p>Hello! This is (clearly) a test!!!</p>
         <p>This is a test, trust bro</p>
-        <a href="https://www.example.com">Page link thing</a>
+        <a href="https://www.example.com">Page linked</a>
         <ul>
-            <li>List of things</li>
+            <li>To do list</li>
             <li>Dont fall</li>
             <li>Do core</li>
         </ul>
